後端架構更新以及附上技術MD
Signed-off-by: twinatrick <130625933+twinatrick@users.noreply.github.com>